Test DB connection

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ DB_HOST=172.16.5.52
 DB_PORT=1433
 DB_NAME=BellScheduleDB
 DB_USER=bell_schedule_user
-DB_PASSWORD=Pass$123
+DB_PASSWORD=Pass!1234
 
 JWT_SECRET=your-jwt-secret
 SYSTEM_AUDIO_PATH=./public/system-audio
